--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,7 @@
 
 	<artifactId>gim-all</artifactId>
 	<packaging>jar</packaging>
+	<version>0.0.1-SNAPSHOT</version>
 
 	<name>gim-all</name>
 	<description>Demo project for Spring Boot</description>
