--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	<description>Demo project for Spring Boot</description>
 
 	<parent>
-		<groupId>pres.gogym</groupId>
+		<groupId>pres.gogym.gim</groupId>
 		<artifactId>gim-parent</artifactId>
 		<version>1.0.0</version>
 	</parent>
